<resources>
    <string name="app_name">FitApp</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_calorie">Counting Calories</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_about">About Us</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key">AIzaSyDuEt4MRYNTfsWQt85bubHhaDJt46aOLd0</string>
    <string name="title_activity_navigation_bar">navigationBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="MAPS_API_KEY">AIzaSyDuEt4MRYNTfsWQt85bubHhaDJt46aOLd0</string>
</resources>
