<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView">

    <group
        android:checkableBehavior="all">

        <item
            android:id="@+id/nav_home"
            android:onClick="showBaba"
            android:checkable="true"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_calorie"
            android:onClick="showBaba"
            android:checkable="true"
            android:title="@string/menu_calorie"/>

        <item
            android:id="@+id/nav_timer"
            android:checkable="true"
            android:onClick="showBaba"
            android:title="@string/menu_timer"/>

        <item
            android:id="@+id/nav_about"
            android:checkable="true"
            android:onClick="showBaba"
            android:title="@string/menu_about"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>
